--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ body{
     font-size: 700%;
     translate: 0 25%;
 }
-.boxy{
-    translate: 0 50%;
+#box2{
+    translate: 0 auto;
      border-radius: 10%;
     border: 0.1rem solid;
     height: 26rem;
@@ -48,8 +48,8 @@ body{
     text-align: center;
     margin-left:auto ;
     margin-right: auto;
+    margin-top: 20%;
 }
-.Empfehlung{
-    translate: 0 450%;
-    font-style: oblique;
+#box2:hover{
+    transform:scale(1.1)
 }
